--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,3 +9,23 @@
   display: grid;
   grid-template-columns: 200px 1fr;
 }
+
+.tumbnail {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+.tumbnail:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery-item {
+  margin: 5px;
+}
