--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,10 @@
   grid-template-columns: 200px 1fr;
 }
 
+.post-list > li {
+  margin-bottom: 0px;
+}
+
 .tumbnail {
   border: 1px solid #ddd;
   border-radius: 4px;
