--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,10 @@
 <script src="{{ "/assets/lightbox/lightbox.min.js" | relative_url }}"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G296WZ4YL8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G296WZ4YL8');
+</script>
