--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,14 +15,14 @@
 }
 
 .tumbnail {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  width: 150px;
+  min-width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s;
 }
 
 .tumbnail:hover {
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  transform: scale(1.05);
 }
 
 .gallery {
@@ -31,5 +31,9 @@
 }
 
 .gallery-item {
-  margin: 5px;
+  flex-grow: 1;
+  height: 200px;
+  margin: 2px;
+  border-radius: 2px;
+  overflow: hidden;
 }
