--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,15 +5,6 @@
 @import "minima/skins/{{ site.minima.skin | default: 'classic' }}",
   "minima/initialize";
 
-.post-page {
-  display: grid;
-  grid-template-columns: 200px 1fr;
-}
-
-.post-list > li {
-  margin-bottom: 0px;
-}
-
 .tumbnail {
   min-width: 100%;
   height: 100%;
@@ -36,4 +27,8 @@
   margin: 2px;
   border-radius: 2px;
   overflow: hidden;
+}
+
+.site-nav {
+  border: none;
 }
