--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,10 @@
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/lightbox/lightbox.min.css" | relative_url }}">
+  <link rel="shortcut icon" type="image/png"href="{{ "/assets/images/owl.png" | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
-
-  {%- include custom-head.html -%}
   
 </head>
