--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,45 +3,49 @@ layout: default
 ---
 
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.modified_date -%}
-        ~ 
-        {%- assign mdate = page.modified_date | date_to_xmlschema -%}
-        <time class="dt-modified" datetime="{{ mdate }}" itemprop="dateModified">
-          {{ mdate | date: date_format }}
-        </time>
-      {%- endif -%}
-      {%- if page.author -%}
-        • {% for author in page.author %}
-          <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-            <span class="p-author h-card" itemprop="name">{{ author }}</span></span>
-            {%- if forloop.last == false %}, {% endif -%}
-        {% endfor %}
-      {%- endif -%}</p>
-  </header>
+    <header class="post-header">
+        <h1 class="post-title p-name" itemprop="name headline">
+            {{ page.title | escape }}
+        </h1>
+        <div class="post-meta">
+            {% for author in page.author %}
+            <div class="profile-picture-container">
+                {%- if author == "Timothy Best" %}
+                <image src="{{ "/assets/images/tim.jpg" | relative_url }}" alt="Tim" /> {% endif -%} {%-
+                if author == "Katherine Nammacher" %}
+                <image src="{{ "/assets/images/katie.jpg" | relative_url }}" alt="Katie" /> {% endif -%}
+            </div>
+            {% endfor %}
+            <div>
+                <div>
+                    {% for author in page.author %}
+                    <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+                        <span class="p-author h-card" itemprop="name">{{ author }}</span>
+                    </span>
+                    {%- if forloop.last == false %} + {% endif -%}
+                    {% endfor %}
+                </div>
+                {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+                <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+                    {{ page.date | date: date_format }}
+                </time>
 
-  <div class="post-content e-content" itemprop="articleBody">
-    {{ content }}
-  </div>
+            </div>
+        </div>
+    </header>
 
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
-  {%- endif -%}
+    <div class="post-content e-content" itemprop="articleBody">{{ content }}</div>
 
-  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+    {%- if site.disqus.shortname -%} {%- include disqus_comments.html -%} {%-
+    endif -%}
+
+    <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
 
 <div class="PageNavigation">
-  {% if page.previous.url %}
+    {% if page.previous.url %}
     <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
-  {% endif %}
-  {% if page.next.url %}
+    {% endif %} {% if page.next.url %}
     <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
-  {% endif %}
+    {% endif %}
 </div>
