--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,14 +19,13 @@
 .gallery {
   display: flex;
   flex-wrap: wrap;
-}
-
-.gallery-item {
-  flex-grow: 1;
-  height: 200px;
-  margin: 2px;
-  border-radius: 2px;
-  overflow: hidden;
+  .gallery-item {
+    flex-grow: 1;
+    height: 200px;
+    margin: 2px;
+    border-radius: 2px;
+    overflow: hidden;
+  }
 }
 
 .site-nav {
@@ -38,15 +37,34 @@
   display: block;
   width: auto;
   overflow: hidden;
+  a {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: 1em 0;
+  }
+  .next {
+    text-align: right;
+  }
 }
 
-.PageNavigation a {
-  display: block;
-  width: 50%;
-  float: left;
-  margin: 1em 0;
+.post-meta {
+  display: flex;
+  .p-author {
+    color: #111111;
+    font-size: 16px;
+  }
 }
-
-.PageNavigation .next {
-  text-align: right;
+.profile-picture-container {
+  display: inline-block;
+  position: relative;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 10px;
+  img {
+    width: auto;
+    height: 100%;
+  }
 }
