--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,3 +8,12 @@
 
   gtag('config', 'G-G296WZ4YL8');
 </script>
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "24f47d9a-7161-4b91-94fc-a9ac46f3f378",
+    });
+  });
+</script>
