--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,51 @@
+
+<footer class="site-footer h-card">
+  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+
+  <div class="wrapper">
+
+    <div class="footer-col-wrapper">
+      <div class="footer-col">
+        <!-- <p class="feed-subscribe">
+          <a href="{{ 'feed.xml' | relative_url }}">
+            <svg class="svg-icon orange">
+              <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+            </svg><span>Subscribe</span>
+          </a>
+        </p> -->
+        <p class="feed-subscribe">
+          <a href="https://www.instagram.com/kbnammacher" target="_blank" title="kbnammacher">
+            <svg class="svg-icon grey">
+              <use xlink:href="{{ 'assets/minima-social-icons.svg#instagram' | relative_url }}"></use>
+            </svg><span>@kbnammacher</span>
+          </a>
+        </p>
+        <p class="feed-subscribe">
+          <a href="https://www.instagram.com/an.adoorable.world" target="_blank" title="an.adoorable.world">
+            <svg class="svg-icon grey">
+              <use xlink:href="{{ 'assets/minima-social-icons.svg#instagram' | relative_url }}"></use>
+            </svg><span>@an.adoorable.world</span>
+          </a>
+        </p>
+        <p class="feed-subscribe">
+          <a href="https://www.youtube.com/channel/UCWch1zmCgL1tD1XoREZxdwA" target="_blank" title="an.adoorable.world">
+            <svg class="svg-icon grey">
+              <use xlink:href="{{ 'assets/minima-social-icons.svg#youtube' | relative_url }}"></use>
+            </svg><span>YouTube</span>
+          </a>
+        </p>
+        <ul class="contact-list">
+          <li><a class="u-email" href="mailto:blog@timothy.best">blog@timothy.best</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <p>{{ site.description | escape }}</p>
+      </div>
+    </div>
+  </div>
+
+</footer>
+
 <script src="{{ "/assets/lightbox/lightbox.min.js" | relative_url }}"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G296WZ4YL8"></script>
