--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,14 @@
           </a>
         </p>
         <p class="feed-subscribe">
-          <a href="https://www.youtube.com/channel/UCWch1zmCgL1tD1XoREZxdwA" target="_blank" title="an.adoorable.world">
+          <a href="https://www.instagram.com/thebestpaka" target="_blank" title="thebestpaka">
+            <svg class="svg-icon grey">
+              <use xlink:href="{{ 'assets/minima-social-icons.svg#instagram' | relative_url }}"></use>
+            </svg><span>@thebestpaka</span>
+          </a>
+        </p>
+        <p class="feed-subscribe">
+          <a href="https://www.youtube.com/channel/UCWch1zmCgL1tD1XoREZxdwA" target="_blank">
             <svg class="svg-icon grey">
               <use xlink:href="{{ 'assets/minima-social-icons.svg#youtube' | relative_url }}"></use>
             </svg><span>YouTube</span>
