--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,1 +1,1 @@
-<iframe width="560" height="315" src="{{ include.link }}" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/{{ include.code }}" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
