--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -1,10 +1,9 @@
 <div class="gallery">
   {% for file in site.static_files %} {% if file.path contains include.folder %}
-  {% assign filenameparts = file.path | split: "/" %} {% assign filename =
-  filenameparts | last | replace: file.extname,"" %} {% assign image_path =
-  file.path %} {% assign thumbnail_path = image_path | replace: 'images',
-  'thumbnails' %} {% assign thumbnail_path_exists = file_exists {{
-  thumbnail_path }} %}
+  {% assign filenameparts = file.path | split: "/" %}
+  {% assign filename = filenameparts | last | replace: file.extname,"" %}
+  {% assign image_path = file.path %}
+  {% assign thumbnail_path = image_path | replace: 'images', 'thumbnails' %} 
   <div class="gallery-item">
     <a
       href="{{ image_path }}"
@@ -12,8 +11,7 @@
       data-image-alt="{{ filename }}"
     >
       <img
-        src="{% if thumbnail_path_exists == 'true' %}{{ thumbnail_path }} {%
-      else %}{{ image_path }}{% endif %}"
+        src="{{ thumbnail_path }}"
         alt="{{ filename }}"
         loading="lazy"
         class="thumbnail"
