--- a/_includes/codepel-gallery.html
+++ b/_includes/codepel-gallery.html
@@ -1,66 +1,11 @@
 <div class="codepelGallery">
     <div class="cards">
-      <div class="cards_item">
-        <div class="card">
-          <div class="card_image">
-            <img src="/assets/thumbnails/2022-06-29-serengeti-best-photos/7-03/IMG_7900.jpg">
-          </div>
-          <div class="card_content">
-            <h2 class="card_title">Safari</h2>
-            <!-- <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-            <button class="btn card_btn">Read More</button> -->
-          </div>
-        </div>
-      </div >
-      <div class="cards_item">
-        <div class="card">
-          <div class="card_image"><img src="/assets/thumbnails/2023-01-31-antarctica/3-tay-head-joinville-island/IMG_0735.jpg"></div>
-          <div class="card_content">
-            <h2 class="card_title">Antarctica</h2>
-            <!-- <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-            <button class="btn card_btn">Read More</button> -->
-          </div>
-        </div>
-      </div >
-      <div class="cards_item">
-        <div class="card">
-          <div class="card_image"><img src="/assets/thumbnails/2022-09-30-nusa-penida/GH011219-3.jpg"></div>
-          <div class="card_content">
-            <h2 class="card_title">SCUBA</h2>
-            <!-- <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-            <button class="btn card_btn">Read More</button> -->
-          </div>
-        </div>
-      </div >
-      <div class="cards_item">
-        <div class="card">
-          <div class="card_image"><img src="/assets/thumbnails/2022-09-06-lantern-making/step-3/IMG_4644.jpg"></div>
-          <div class="card_content">
-            <h2 class="card_title">Lantern making</h2>
-            <!-- <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-            <button class="btn card_btn">Read More</button> -->
-          </div>
-        </div>
-      </div >
-      <div class="cards_item">
-        <div class="card">
-          <div class="card_image"><img src="/assets/thumbnails/2022-08-25-angkorwat/AngkorWat-Photoshoot/IMG_1776.jpg"></div>
-          <div class="card_content">
-            <h2 class="card_title">Angkor Wat</h2>
-            <!-- <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-            <button class="btn card_btn">Read More</button> -->
-          </div>
-        </div>
-      </div >
-      <div class="cards_item">
-        <div class="card">
-          <div class="card_image"><img src="/assets/thumbnails/2022-10-04-seoul/proposal/PXL_20221009_093745068.jpg"></div>
-          <div class="card_content">
-            <h2 class="card_title">Getting Engaged</h2>
-            <!-- <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
-            <button class="btn card_btn">Read More</button> -->
-          </div>
-        </div>
-      </div >
-    </div>
+      {% include codepel-item.html title="10 day safari" image="/assets/thumbnails/2022-06-29-serengeti-best-photos/7-03/IMG_7900.jpg" %}
+      {% include codepel-item.html title="Cruise to Antarctica" image="/assets/thumbnails/2023-01-31-antarctica/3-tay-head-joinville-island/IMG_0735.jpg" %}
+      {% include codepel-item.html title="Diving in Bali" image="/assets/thumbnails/2022-09-30-nusa-penida/GH011219-3.jpg" %}
+      {% include codepel-item.html title="Lantern making in Hội An" image="/assets/thumbnails/2022-09-06-lantern-making/step-3/IMG_4644.jpg" %}
+      {% include codepel-item.html title="Photo shoot in Angkor Wat" image="/assets/thumbnails/2022-08-25-angkorwat/AngkorWat-Photoshoot/IMG_1776.jpg" %}
+      {% include codepel-item.html title="Proposal in Seoul" image="/assets/thumbnails/2022-10-04-seoul/proposal/PXL_20221009_093745068.jpg" %}
+      <!-- Paka, Swimming with dolphins, break antarctica into two (sun set and blue whale) -->
+  </div>
 </div>
