--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -1,22 +1,33 @@
 <div class="gallery">
-  {% for file in site.static_files %} {% if file.path contains include.folder %}
-  {% assign filenameparts = file.path | split: "/" %}
-  {% assign filename = filenameparts | last | replace: file.extname,"" %}
-  {% assign image_path = file.path %}
-  {% assign thumbnail_path = image_path | replace: 'images', 'thumbnails' %} 
-  <div class="gallery-item">
-    <a
-      href="{{ image_path }}"
-      data-lightbox="gallery"
-      data-image-alt="{{ filename }}"
-    >
-      <img
-        src="{{ thumbnail_path }}"
-        alt="{{ filename }}"
-        loading="lazy"
-        class="thumbnail"
-      />
-    </a>
-  </div>
-  {% endif %} {% endfor %}
+  {% for file in site.static_files %}
+    {% if file.path contains include.folder %}
+      {% assign filenameparts = file.path | split: "/" %}
+      {% assign filename = filenameparts | last | replace: file.extname,"" %}
+      {% assign image_path = file.path %}
+      {% assign thumbnail_path = image_path | replace: 'images', 'thumbnails' %} 
+      <div class="gallery-item">
+        <a
+          href="{{ image_path }}"
+          data-lightbox="gallery"
+          data-image-alt="{{ filename }}"
+        >
+          {% if image_path contains ".gif" %}
+            <img
+              src="{{ image_path }}"
+              alt="{{ filename }}"
+              loading="lazy"
+              class="thumbnail"
+            />
+          {% else %}
+            <img
+              src="{{ thumbnail_path }}"
+              alt="{{ filename }}"
+              loading="lazy"
+              class="thumbnail"
+            />
+          {% endif %}
+        </a>
+      </div>
+    {% endif %}
+  {% endfor %}
 </div>
