paginate the posts

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -10,7 +10,7 @@
               <h1 class="timeline-title">Timeline</h1>
             </div>
           </li>
-          {% include timeline-item.html date="May 13, 2022" title="Katie and Tim quit their Jobs" %}
+          {% include timeline-item.html date="May 13, 2022" description="Katie and Tim quit their Jobs" %}
           {% include timeline-item.html date="May 22, 2022" title="Italy" description="We chose Italy as our Country in Europe so that we could attend the [Venice Biennale](/2022/06/01/venice-biennale.html)" %}
           {% include timeline-item.html date="June 10, 2022" title="Amsterdam" description="Spent a week in Amsterdam in order to get a direct flight to Tanzania" %}
           {% include timeline-item.html date="June 15, 2022" title="Tanzania" description="Climbed to the top of [Kilimanjaro](/2022/06/21/kilimanjaro.html), went on a [10 day Safari](/2022/06/29/serengeti-best-photos.html), and [adopted a cat](/2022/07/13/paka-lesson-in-flexibility.html) in Zanzibar" %}
