--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -21,9 +21,9 @@
           {% include timeline-item.html date="September 22, 2022" title="Bali" description="Not wanting to handover our passports to a foreign government for a week to extend our 30 day visa. We left Vietnam and decide to get [SCUBA certified in Amed](/2022/09/24/bali-amed-scubadiving-DRAFT.html) and [swim with Manta Rays](/2022/09/30/nusa-penida-and-kuta-utara-DRAFT.html)" %}
           {% include timeline-item.html date="October 4, 2022" title="Seoul, Korea" description="Met up with Tim's friend to get a private tour of [Seoul](/2022/10/04/seoul-DRAFT.html). Including north korean cold noodles and a tour of the blue house. And we got engaged with a joint proposal!" %}
           {% include timeline-item.html date="October 12, 2022" title="New Zealand" description="Sorry Australia. We counted a 2 month excursion around New Zealand as our Australia continent. While here we bought a car, traveled with family & friends, swam with dolphins, climbed a glacier, and did multiple great walks" %}
-          {% include timeline-item.html date="December 12, 2022" title="USA" description="Back to the states for the holidays" %}
-          {% include timeline-item.html date="January 6, 2023" title="Chile" description="Penguin and Whale watching in [Punta Arenas](/2023/01/06/punta-arenas-DRAFT.html), visiting friends in [Puerto Varas](/2023/01/16/puerto-varas-DRAFT.html), and eating our way through [Santiago](/2023/01/20/santiago-DRAFT.html)" %}
-          {% include timeline-item.html date="January 29, 2023" title="Antarctica" description="Took a boat from Ushuaia, Argentina with Katies parents to see penguins, blue whales, the most amazing sunset" %}
+          {% include timeline-item.html date="December 12, 2022" title="[USA](/2022/12/24/christmas-DRAFT.html)" description="Back to the states for the holidays" %}
+          {% include timeline-item.html date="January 6, 2023" title="[Chile](/posts/chile.html)" description="Penguin and Whale watching in [Punta Arenas](/2023/01/06/punta-arenas-DRAFT.html), visiting friends in [Puerto Varas](/2023/01/16/puerto-varas-DRAFT.html), and eating our way through [Santiago](/2023/01/20/santiago-DRAFT.html)" %}
+          {% include timeline-item.html date="January 29, 2023" title="[Antarctica](/posts/antarctica.html)" description="Took a boat from Ushuaia, Argentina with Katies parents to see penguins, blue whales, the most amazing sunset" %}
           <li class="timeline-item period">
             <div class="timeline-info"></div>
             <div class="timeline-marker end"></div>
