add links to the highlights

--- a/_includes/codepel-gallery.html
+++ b/_includes/codepel-gallery.html
@@ -1,11 +1,13 @@
 <div class="codepelGallery">
     <div class="cards">
-      {% include codepel-item.html title="10 day safari" image="/assets/thumbnails/2022-06-29-serengeti-best-photos/7-03/IMG_7900.jpg" %}
-      {% include codepel-item.html title="Cruise to Antarctica" image="/assets/thumbnails/2023-01-31-antarctica/3-tay-head-joinville-island/IMG_0735.jpg" %}
-      {% include codepel-item.html title="Diving in Bali" image="/assets/thumbnails/2022-09-30-nusa-penida/GH011219-3.jpg" %}
-      {% include codepel-item.html title="Lantern making in Hội An" image="/assets/thumbnails/2022-09-06-lantern-making/step-3/IMG_4644.jpg" %}
-      {% include codepel-item.html title="Photo shoot in Angkor Wat" image="/assets/thumbnails/2022-08-25-angkorwat/AngkorWat-Photoshoot/IMG_1776.jpg" %}
-      {% include codepel-item.html title="Proposal in Seoul" image="/assets/thumbnails/2022-10-04-seoul/proposal/PXL_20221009_093745068.jpg" %}
-      <!-- Paka, Swimming with dolphins, break antarctica into two (sun set and blue whale) -->
+      {% include codepel-item.html title="10 day safari" image="/assets/thumbnails/2022-06-29-serengeti-best-photos/7-03/IMG_7900.jpg" link="/2022/06/28/serengeti-animals-place.html" %}
+      {% include codepel-item.html title="Cruise to Antarctica" image="/assets/thumbnails/2023-01-31-antarctica/3-tay-head-joinville-island/IMG_0735.jpg" link="/posts/antarctica.html" %}
+      {% include codepel-item.html title="Diving in Bali" image="/assets/thumbnails/2022-09-30-nusa-penida/GH011219-3.jpg" link="/2022/09/24/bali-amed-scubadiving-DRAFT.html" %}
+      {% include codepel-item.html title="Lantern making in Hội An" image="/assets/thumbnails/2022-09-06-lantern-making/step-3/IMG_4644.jpg" link="/2022/09/06/hoi-an-lantern-making.html" %}
+      {% include codepel-item.html title="Photo shoot in Angkor Wat" image="/assets/thumbnails/2022-08-25-angkorwat/AngkorWat-Photoshoot/IMG_1776.jpg" link="/2022/08/26/siem-reap-photoshoot.html" %}
+      {% include codepel-item.html title="Proposal in Seoul" image="/assets/thumbnails/2022-10-04-seoul/proposal/PXL_20221009_093745068.jpg" link="2022/10/04/seoul-DRAFT.html" %}
+      {% include codepel-item.html title="Adopting Paka" image="/assets/images/2022-07-09-zanzibar-to-dar-es-salaam/04-airbnb/PXL_20220709_130744307.jpg" link="/2022/07/10/dar-es-salaam.html" %}
+      {% include codepel-item.html title="Swimming with Dolphins" image="/assets/images/2022-11-13-kaikoura/IMG_1806.jpg" link="/2022/11/13/kaikoura-DRAFT.html" %}
+      {% include codepel-item.html title="Summiting Kilimanjaro" image="/assets/images/2022-06-21-kilimanjaro/day6/IMG_3407.jpg" link="/2022/06/21/kilimanjaro.html" %}
   </div>
 </div>
