--- a/_includes/codepel-item.html
+++ b/_includes/codepel-item.html
@@ -1,13 +1,13 @@
 
-<div class="cards_item">
+<a href="{{ include.link }}" class="cards_item">
   <div class="card">
     <div class="card_image">
-      <img src="{{include.image}}">
+      <img src="{{ include.image }}">
     </div>
     <div class="card_content">
-      <h2 class="card_title">{{include.title}}</h2>
+      <h2 class="card_title">{{ include.title }}</h2>
       <!-- <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
       <button class="btn card_btn">Read More</button> -->
     </div>
   </div>
-</div >
+</a>
